--- a/src/scss/components/recipe.scss
+++ b/src/scss/components/recipe.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   margin: 1rem;
-  box-shadow: 0 1rem 20rem rgba(192, 57, 43,1.0);    
+  box-shadow: 0 1rem 20rem rgba(16, 172, 132,.5);    
   overflow: hidden;
   border-radius: 1rem .3rem;
 
