--- a/src/scss/components/container.scss
+++ b/src/scss/components/container.scss
@@ -1,8 +1,20 @@
 .container {
+  position: relative;
   height: 100vh;
   overflow: hidden;
   display: flex;
   padding: 10rem 0 0rem;
+
+  &::before {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 2%;
+    height: 100%;
+    background: #fff;
+    z-index: 30;
+  }
 
   &__side {
     height: 100%;
@@ -10,7 +22,7 @@
 
   &__left {
     position: relative;
-    flex-basis: 40%;
+    width: 47%;
     overflow: scroll;
     overflow-x: hidden;
     z-index: 4;
@@ -18,10 +30,108 @@
 
   &__right {
     position: relative;
-    background: red;
-    flex-basis: 60%;
-    transform: translateX(-2rem);    
-    padding: 1rem;
+    background: #fff;
+    width: 68%;
+    transform: translateX(-2rem);
+    padding: 1rem 0;
     z-index: 5;
+    padding-left: 2rem;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding-bottom: 8rem;
+
+    & figure {
+      width: 100%;
+      height: 47rem;
+
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+      }
+    }
+
+    & h2 {
+      padding: 2rem 0;
+      font-size: 3rem;
+      font-weight: 900;
+      text-decoration: underline;
+      color: rgba(192, 57, 43,1.0);
+    }
+
+    & h3 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: rgba(16, 172, 132,1.0);
+      margin-bottom: 1.5rem;
+    }
+
+    & h4 {
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 1.5rem;
+    }
+
+    &__ingredients {
+
+      &--ingredient {
+        display: flex;
+        align-items: center;
+        font-size: 2rem;
+        font-weight: 500;
+
+        & span {
+          display: inline-block;
+        }
+
+        & span:nth-child(1) {
+          margin-right: 1rem;
+        }
+      }
+
+      &--ingredient-svg {
+        height: 3rem;
+        width: 3rem;
+        fill: rgba(192, 57, 43,1.0);
+        transform: translateY(.4rem);
+      }
+    }
+
+    &__socialrank {
+      position: absolute;
+      top: 2%;
+      z-index: 4;
+      right: 0;
+      background: #10ac84;
+      padding: 1rem 3rem;
+      width: 20%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 3rem .3rem;
+      font-weight: 900;
+      color: #fff;
+      font-size: 2rem;
+      box-shadow: 1rem 1rem 32rem #10ac84;    
+    }
+
+    &__timetoprepare {
+      position: absolute;
+      top: 50%;
+      z-index: 4;
+      right: 0;
+      background: #c0392b;
+      padding: 1rem 3rem;
+      width: 21%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 3rem .3rem;
+      font-weight: 900;
+      color: #fff;
+      font-size: 2rem;
+      box-shadow: 1rem 1rem 32rem #10ac84;
+    }
   }
 }
