--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -23,3 +23,54 @@ html {
     fill: rgba(192, 57, 43,1.0);
   }
 }
+
+.apilimitreached {
+  z-index: 9000;
+  position: fixed;
+  top: 10%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  font-size: 4rem;
+  font-weight: 900;
+  padding: 4rem;
+  color: red;  
+}
+
+#search-ui {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(192, 57, 43,1.0);
+  z-index: 9500;
+  height: 100vh;
+  width: 100vw;
+  text-align: center;
+  word-wrap: break-word;
+  display: none;
+  font-size: 5rem;
+  color: #fff;
+  font-weight: 700;
+  padding: 7rem 10rem;
+  letter-spacing: .2rem;
+
+  & span {
+    position: absolute;
+    top: 4%;
+    right: 2%;
+    height: 6rem;
+    width: 6rem;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+
+    & svg {
+      height: 3rem;
+      width: 3rem;
+      fill: #000000;
+    }
+  }
+}
