--- a/src/scss/components/container.scss
+++ b/src/scss/components/container.scss
@@ -40,6 +40,19 @@
     overflow-x: hidden;
     padding-bottom: 8rem;
 
+    &--error {
+      position: relative;
+      background: #fff;
+      width: 68%;
+      transform: translateX(-2rem);
+      padding: 1rem 0;
+      z-index: 5;
+      padding-left: 2rem;
+      overflow: scroll;
+      overflow-x: hidden;
+      padding-bottom: 8rem;
+    }
+
     & figure {
       width: 100%;
       height: 47rem;
