--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -9,6 +9,18 @@
 html {
   box-sizing: border-box;
   font-size: 63%;
+
+  @media only screen and (max-width: 65.938em) {
+    font-size: 58%;
+  }
+
+  @media only screen and (max-width: 64em) {
+    font-size: 80%;
+  }
+
+  @media only screen and (max-width: 25.75em) {
+    font-size: 50%;
+  }
 }
 
 .loading-svg {
