--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -8,6 +8,15 @@
   box-shadow: 1rem 1rem 32rem rgba(16, 172, 132,1.0);
   display: flex;
   align-items: center;
+  transition: all .2s ease-in;
+
+  @media only screen and (max-width: 64em) {
+    flex-direction: column;
+    height: 100%;
+    background: #fff;
+    width: 65vw;
+    transform: translateX(-110%);
+  }
 
   &__name {
     margin-right: 5rem;
@@ -20,12 +29,20 @@
     & span:nth-child(1) {
       color: rgba(192, 57, 43,1.0);
       font-size: 3rem;
+
+      @media only screen and (max-width: 64em) {
+        font-size: 5rem;
+      }
     }
 
     & span:nth-child(2) {
       color: rgba(16, 172, 132,1.0);
       font-size: 3rem;
       text-transform: uppercase;
+
+      @media only screen and (max-width: 64em) {
+        font-size: 5rem;
+      }
     }
   }
 }
