--- a/src/scss/components/searchbar.scss
+++ b/src/scss/components/searchbar.scss
@@ -1,6 +1,11 @@
 .searchbar {
   width: 60%;
 
+  @media only screen and (max-width: 64em) {
+    width: 100%;
+    margin: 3rem 0;
+  }
+
   & input {
     font-size: 2rem;
     font-family: inherit;
@@ -15,8 +20,12 @@
     transition: all .3s;
     outline: none;
 
+    @media only screen and (max-width: 64em) {
+      height: 7rem;
+    }
+
     &::-webkit-input-placeholder {
       color: rgba(192, 57, 43,1.0);
-  }
+    }
   }
 }
