--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -5,9 +5,20 @@
   font-weight: 700;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  @media only screen and (max-width: 64em) {
+    margin: 3rem 0;
+    font-size: 3rem;
+  }
 
   &__inputarea {
     width: 20rem;
+
+    @media only screen and (max-width: 64em) {
+      width: 30rem;
+    }
   }
 }
 
