--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -53,7 +53,7 @@ html {
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(192, 57, 43,1.0);
+  background: rgba(192, 57, 43,.9);
   z-index: 9500;
   height: 100vh;
   width: 100vw;
