--- a/src/scss/components/searchbar.scss
+++ b/src/scss/components/searchbar.scss
@@ -22,6 +22,11 @@
 
     @media only screen and (max-width: 64em) {
       height: 7rem;
+      font-size: 3rem;
+    }
+
+    @media only screen and (max-width: 30em) {
+      font-size: 2rem;
     }
 
     &::-webkit-input-placeholder {
