--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -18,6 +18,11 @@
     transform: translateX(-110%);
   }
 
+  @media only screen and (max-width: 37.5em) {
+    width: 80vw;
+    padding: 1.5rem .5rem;
+  }
+
   &__name {
     margin-right: 5rem;
     font-weight: 900;
@@ -33,6 +38,10 @@
       @media only screen and (max-width: 64em) {
         font-size: 5rem;
       }
+
+      @media only screen and (max-width: 30em) {
+        font-size: 3rem;
+      }
     }
 
     & span:nth-child(2) {
@@ -42,6 +51,10 @@
 
       @media only screen and (max-width: 64em) {
         font-size: 5rem;
+      }
+
+      @media only screen and (max-width: 30em) {
+        font-size: 3rem;
       }
     }
   }
